trunk/Archive2/a1/e5cc7c306edfe6/output
main.cpp:6:21: error: unterminated argument list invoking macro "B"
 #if defined(A) && B(1
                     ^
